--- a/_posts/2018-12-03-new-blog.md
+++ b/_posts/2018-12-03-new-blog.md
@@ -2,6 +2,7 @@
 layout: post
 title: "Welcome to My New Blog"
 date: 2018-12-03
+description: I'm creating a new blog to serve as my platform for sharing my learnings / knowledge / thoughts mainly in artificial intelligence but also other random interesting contents.
 ---
 
 My old blog, a customized Tumblr page was stuck with a content I wrote two years ago. Interestingly, it is about [generating Pokemon names using LSTM](https://jpbalbin.tumblr.com/post/147087216235/generating-pokemon-names-using-neural-network). RNN and LSTM have come a long way since I wrote that post. I also toyed with LSTM again last year for a [post](https://blog.indigoresearch.xyz/become-a-mocha-uson-commenter-using-lstm/) at our Indigo Research blog.
